# App-multi-LLM

./: .env.example  .gitignore  README.md  app_gradio.py  openapi.json  pyproject.toml  run.py  server.py  server_mock.py
.claude/: settings.local.json
configs/: baseline_groq.yaml  baseline_qwen.yaml
notebooks/: demo_baseline.ipynb
src/eloquent/: __init__.py  config.py  logger.py  pipeline.py  prompting.py  providers.py
tests/: test_pipeline.py  test_providers.py
