[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eloquent-lot-a"
version = "0.1.0"
description = "Pipeline backend multi-LLM pour le challenge ELOQUENT CLEF 2026"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.9.0",
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "httpx>=0.27.0",       # Pour tester les endpoints FastAPI
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
